# overcooked_ai

./: .coveragerc  .gitattributes  .gitignore  .uvrc  Overcooked Tutorial.ipynb  README.md  UV_MIGRATION.md  codecov.yml  create_agent.py  pyproject.toml  requirements.txt  reward_model.txt  run.py  run_complex.py  setup.py  train_bc.sh  transition_model.txt
src/overcooked_demo/server/: Dockerfile  README.md  app.py  config.json  dev_helper.py  game.py  init.sh  move_agents.py  pyproject.toml  requirements.txt  run_server.sh  utils.py
src/overcooked_demo/server/graphics/: dummy_graphics.js  overcooked_graphics_v1.js  overcooked_graphics_v2.1.js  overcooked_graphics_v2.2.js  overcooked_graphics_v2.js
src/overcooked_demo/server/static/assets/agents/: README.md
src/overcooked_demo/server/static/assets/agents/RandAI/: agent.pickle
src/overcooked_demo/server/static/assets/agents/RandComputeAI/: agent.pickle
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesBC/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesBC/agent/: .tune_metadata  checkpoint-600
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesBC/bc_params/asymmetric_advantages/: metadata.pickle  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesBC/bc_params/asymmetric_advantages/checkpoints/: keras_metadata.pb  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesBC/bc_params/asymmetric_advantages/variables/: variables.index
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesSP/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibAsymmetricAdvantagesSP/agent/: .tune_metadata  checkpoint-650  checkpoint-700
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingBC/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingBC/agent/: .tune_metadata  checkpoint-550
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingBC/bc_params/coordination_ring/: keras_metadata.pb  metadata.pickle  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingBC/bc_params/coordination_ring/checkpoints/: saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingBC/bc_params/coordination_ring/variables/: variables.data-00000-of-00001
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingSP/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCoordinationRingSP/agent/: .tune_metadata  checkpoint-650  checkpoint-700
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderBC/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderBC/agent/: .tune_metadata  checkpoint-550
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderBC/bc_params/random3/: keras_metadata.pb  metadata.pickle  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderBC/bc_params/random3/checkpoints/: saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderBC/bc_params/random3/variables/: variables.index
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderSP/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCounterCircuit1OrderSP/agent/: .tune_metadata  checkpoint-650  checkpoint-750
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomBC/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomBC/agent/: .tune_metadata  checkpoint-550
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomBC/bc_params/cramped_room/: metadata.pickle  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomBC/bc_params/cramped_room/checkpoints/: keras_metadata.pb  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomBC/bc_params/cramped_room/variables/: variables.index
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomPPO_BC_temp/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomPPO_BC_temp/agent/: .tune_metadata  checkpoint-650
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomPPO_BC_temp/bc_params/cramped_room_train/: saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomPPO_SP/agent/: .tune_metadata
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomPPO_SP_temp/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomPPO_SP_temp/agent/: .tune_metadata  checkpoint-500
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomSP/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibCrampedRoomSP/agent/: checkpoint-550
src/overcooked_demo/server/static/assets/agents/RllibForcedCoordinationBC/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibForcedCoordinationBC/agent/: .tune_metadata  checkpoint-550
src/overcooked_demo/server/static/assets/agents/RllibForcedCoordinationBC/bc_params/random0/: metadata.pickle  saved_model.pb
src/overcooked_demo/server/static/assets/agents/RllibForcedCoordinationBC/bc_params/random0/checkpoints/: keras_metadata.pb
src/overcooked_demo/server/static/assets/agents/RllibForcedCoordinationSP/: config.pkl
src/overcooked_demo/server/static/assets/agents/RllibForcedCoordinationSP/agent/: .tune_metadata  checkpoint-650
src/overcooked_demo/server/static/assets/agents/StayAI/: agent.pickle
src/overcooked_demo/server/static/css/: style.css
src/overcooked_demo/server/static/js/: index.js  predefined.js  psiturk.js  tutorial.js
src/overcooked_demo/server/static/templates/: index.html  instructions.html  predefined.html  psiturk.html  tutorial.html
(+455 files in other folders)
