[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "overcooked_ai"
version = "2.0.0"
description = "Cooperative multi-agent environment based on Overcooked"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Micah Carroll", email = "mdc@berkeley.edu"}
]
urls = {homepage = "https://github.com/HumanCompatibleAI/overcooked_ai"}
keywords = ["Overcooked", "AI", "Reinforcement Learning"]
dependencies = [
    "dill>=0.3.9",
    "gymnasium>=1.1.1",
    "ipywidgets>=8.1.5",
    "numpy<=1.23.5",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "scipy>=1.15.2",
    "setuptools>=77.0.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
harl = [
    "ipykernel>=6.29.5",
    "ray[rllib,tune]==2.0",
    "sacred>=0.8.7",
    "dm-tree>=0.1.9",
    "lz4>=4.4.3",
    "tensorflow>=2.11.1",
    "pydantic<2",
    "wandb>=0.18.7",
]

[project.scripts]
overcooked-demo-up = "overcooked_demo:start_server"
overcooked-demo-move = "overcooked_demo:move_agent"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"overcooked_ai_py" = [
    "data/layouts/*.layout",
    "data/planners/*.py",
    "data/graphics/*.png",
    "data/graphics/*.json",
    "data/fonts/*.ttf",
]
"human_aware_rl" = [
    "static/**/*.pickle",
    "static/**/*.csv",
    "ppo/trained_example/*.pkl",
    "ppo/trained_example/*.json",
    "ppo/trained_example/*/.is_checkpoint",
    "ppo/trained_example/*/.tune_metadata",
    "ppo/trained_example/*/checkpoint-500",
] 
