[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "overcooked_server"
version = "1.0.0"
description = "Server for Overcooked AI demo"
requires-python = ">=3.9"
dependencies = [
    "dill",
    "numpy<2.0.0",
    "certifi>=2020.6.20",
    "click>=8.0",
    "dnspython>=1.16.0",
    "Flask>=2.1.0",
    "Flask-SocketIO>=4.3.0",
    "greenlet>=0.4.16",
    "itsdangerous>=2.0",
    "Jinja2>=3.1.0",
    "MarkupSafe>=2.0",
    "monotonic>=1.5",
    "python-engineio>=3.13.0",
    "python-socketio>=4.6.0",
    "six>=1.15.0",
    "Werkzeug>=2.0.3",
    "requests>=2.23.0",
    "protobuf>=3.19",
    "eventlet>=0.39.0",
    "ray[rllib]>=2.5.0",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.14.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.package-dir]
"" = "../.." 